2025-12-29  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/node.cpp: Fix code style nits.
	(font_info::set_bold)
	(troff_output_file::fill_color): Parenthesize formally complex
	expressions.
	(tfont::tfont)
	(real_output_file::~real_output_file)
	(zero_width_node::tprint)
	(translate_font): Explicitly compare value of pointer type to
	null pointer literal instead of letting it pun down to a
	Boolean.
	(translate_font)
	(configure_track_kerning)
	(constantly_space_font): Drop unnecessary parentheses from
	expression.

2025-12-29  G. Branden Robinson <g.branden.robinson@gmail.com>

	[troff]: Trivially refactor.

	* src/roff/troff/div.h: Rename declaration `cleanup_and_exit()`
	to `write_any_trailer_and_exit()`.  Comment formal argument
	name as a compromise with the Stroustrup-style C++ used in most
	of groff.
	* src/roff/troff/div.cpp (cleanup_and_exit): Rename this...
	(write_any_trailer_and_exit): ...to this.
	* src/roff/troff/div.cpp (top_level_diversion::begin_page):
	* src/roff/troff/input.cpp (exit_troff, abort_request, do_error)
	(fatal_with_file_and_line): Migrate call sites.

2025-12-29  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp: Refactor.
	(abort_request): Replace open-coded logic duplicating an
	existing function with a call of `terminal_write()`.

2025-12-29  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp: Trivially refactor.
	(do_terminal)
	(terminal)
	(terminal1)
	(terminal_continue): Rename these...
	(terminal_write)
	(terminal_message_request)
	(terminal_message1_request)
	(terminal_message_continuation_request): ...to these.
	(init_input_requests): Update wire-uppery.

2025-12-29  G. Branden Robinson <g.branden.robinson@gmail.com>

	[troff]: Trivially refactor for clarity.  "asciify" is one of
	the code base's more overloaded terms.  Rename one application
	of it.

	* src/roff/troff/token.h: Rename `asciify()` and relocate its
	declaration from here...